speaker's own page + styling fix on small screens

--- a/src/main/resources/css/main.scss
+++ b/src/main/resources/css/main.scss
@@ -40,7 +40,6 @@ h2 {
 }
 
 .container {
-  min-width: 335px;
   margin: vars.$spacing-xx-large vars.$spacing-huge;
   @include mixins.marginFor(
     vars.$laptop-width,
